fix letter spacing

--- a/css/index.css
+++ b/css/index.css
@@ -245,9 +245,15 @@ header .logo {
 .main-content .bottom-content p {
   padding-right: 1.48%;
 }
+.main-content h4 {
+  letter-spacing: 1px;
+}
 /* Contact Styles */
 .contact p {
   margin: 40px 0;
+}
+.contact h4 {
+  letter-spacing: 1px;
 }
 /* Footer Styles */
 footer {
