--- a/less/main-content.less
+++ b/less/main-content.less
@@ -31,5 +31,5 @@
 }
 
 .main-content h4 {
-    letter-spacing: 1.79%;
+    letter-spacing: 1px;
 }
